# talgonite

./: .gitignore  CHANGELOG.md  Cargo.toml  ISSUES_FIXED.md  README.md
.claude/: settings.local.json
formats/: Cargo.toml
formats-macros/: Cargo.toml
formats-macros/src/: lib.rs
formats/src/: efa.rs  epf.rs  game_files.rs  ktx2.rs  mpf.rs
game-input/: Cargo.toml
game-input/src/: actions.rs  bindings.rs  lib.rs  unified.rs
game-types/: Cargo.toml
game-types/src/: hotbar.rs  settings.rs  ui_types.rs
game-ui/: Cargo.toml
game-ui/src/: input_bridge.rs  ipc.rs
game-ui/ui/: character_creation_state.slint  game_state.slint  login_bridge.slint  login_state.slint  mail_board_state.slint  scene.slint  settings_state.slint
game-ui/ui/components/: base_panel.slint  character_card.slint  character_creation_scene.slint  character_panel.slint  chat_log.slint  game_scene.slint  game_sidebar.slint  hot_bar.slint  login_scene.slint  mail_board_panel.slint  profile_panel.slint  skill_list.slint  social_status_panel.slint  world_labels.slint
game-ui/ui/components/settings/: controls.slint  graphics.slint
installer/: Cargo.toml
installer/src/: animation_processor.rs  asset_record.rs  da741.rs  da741_profile.rs  dat.rs  deferred_job.rs  lib.rs  palette_processor.rs  raw_asset_processor.rs  sink.rs  source.rs  structured_format_processor.rs  texture_processor.rs
packets/: Cargo.toml
packets/src/: client.rs  lib.rs  server.rs
packets/src/client/: board_interaction.rs  create_char_finalize.rs  create_char_initial.rs  emote.rs  homepage_request.rs
packets/src/server/: display_board.rs  display_player.rs  login_message.rs  server_info.rs
rendering/: Cargo.toml
rendering/src/: camera.rs  instance.rs
rendering/src/scene/: effects.rs  mod.rs
rendering/src/scene/creatures/: mod.rs
rendering/src/scene/items/: mod.rs
rendering/src/scene/map/: renderer.rs
rendering/src/scene/minimap/: mod.rs
rendering/src/scene/players/: mod.rs  palettes.rs  types.rs
rendering/src/shaders/: effect.wgsl  minimap.wgsl  shader.wgsl  translucent_player_composite.wgsl
src/: app_state.rs  events.rs  lib.rs  main.rs  minimap_assets.rs  network.rs  resources.rs  rich_text.rs  settings.rs  settings_types.rs  slint_plugin.rs
src/ecs/: components.rs  hotbar.rs  macros.rs  mod.rs  plugin.rs  spell_casting.rs
src/ecs/systems/: auto_attack.rs  camera.rs  entities.rs  interruption.rs  map.rs  movement.rs  pathfinding.rs  rendering.rs
src/input/: README.md
src/plugins/: input.rs  mouse_interaction.rs
src/render_plugin/: game.rs
src/session/: pre_login.rs  pre_login.rs.backup  runtime.rs
src/slint_support/: assets.rs  gpu_init.rs  mod.rs  profile_bridge.rs  rendering_notifier.rs  state_bridge.rs
src/slint_support/callbacks/: game_callbacks.rs  login_callbacks.rs  settings_callbacks.rs
src/webui/: keyring.rs  plugin.rs
tests/: rendering_snapshots.rs
tests/common/: mod.rs
www/src/components/: DownloadButton.astro
www/src/pages/: index.astro
