[package]
name = "talgonite"
version.workspace = true
edition.workspace = true
repository = "https://github.com/talgonite/talgonite"
authors = ["Chris Rohlfs"]
description = "Talgonite is a Darkages client"

[package.metadata.wix]
upgrade-guid = "8797ED34-0315-470B-83DD-E9BAA9577679"
path-guid = "3ACCB3E0-68DA-4089-8B96-9E4424618FC4"
license = false
eula = false

[profile.dev]
opt-level = 1
debug = 0

# Optimize everything including dependencies and workspace members
[profile.dev.package."*"]
opt-level = 3
debug-assertions = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lib]
crate-type = ["lib", "cdylib"]
name = "talgonite_lib"
path = "src/lib.rs"

[[bin]]
name = "talgonite"
path = "src/main.rs"

[dependencies]
installer.workspace = true
formats.workspace = true
formats-macros.workspace = true
rendering.workspace = true
packets.workspace = true
crc.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
async-channel = "2.3"
network.workspace = true
game-types.workspace = true
game-input.workspace = true
game-ui.workspace = true

bytemuck = { version = "1.24", features = ["derive"] }
ktx2 = "0.5"
glam = "0.32"
anyhow = "1"
byteorder = "1.5"
wgpu = "28"
libarx = { version = "0.4", features = ["zstd"] }
jubako = "*"
async-std = "1.13"
rand = { version = "0.10", features = ["log", "std"] }
md5 = "0.8"
bevy = { version = "0.19.0-rc.1", default-features = false, features = ["bevy_state"] }
gilrs = "0.11"
kira = { version = "0.12", default-features = false, features = [
    "mp3",
    "cpal",
] }
crossbeam-channel = "0.5"
paste = "1"
pathfinding = "4.11"
bevy_tasks = "0.19.0-rc.1"
bevy_input_focus = "0.19.0-rc.1"
futures-lite = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6"
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
base64 = "0.22"
keyring-core = { version = "1" }
oxicode = { version = "0.2", features = ["simd"] }

slint = { version = "1.16.1", default-features = false, features = [
    "backend-default",
    "compat-1-2",
    "unstable-wgpu-28",
    "renderer-skia",
    "backend-android-activity-06",
] }
i-slint-core = "=1.16.1"
toml = "1.1"
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }
rangemap = { version = "1.7", features = ["serde1"] }
rhai = { version = "1.24.0", features = ["sync"] }

[dev-dependencies]
insta = "1.44"
pollster = "0.4"
png = "0.18"
anyhow = "1"

[workspace.package]
version = "0.1.8"
edition = "2024"

[workspace]
members = [
    "crc",
    "formats",
    "formats-macros",
    "installer",
    "rendering",
    "packets",
    "network",
    "game-types",
    "game-input",
    "game-ui",
]

[workspace.dependencies]
formats = { path = "formats" }
formats-macros = { path = "formats-macros" }
installer = { path = "installer" }
rendering = { path = "rendering" }
network = { path = "network" }
packets = { path = "packets" }
crc = { path = "crc" }
game-types = { path = "game-types" }
game-input = { path = "game-input" }
game-ui = { path = "game-ui" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "1"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
android-native-keyring-store = "1"

[package.metadata.android]
use_aapt2 = true
package = "com.talgonite.client"
label = "Talgonite"
apk_name = "talgonite"
strip = "strip"
build_targets = ["x86_64-linux-android"]

[[package.metadata.android.application.activity]]
name = "android.app.NativeActivity"
label = "Talgonite"
[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "talgonite_lib"
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[package.metadata.android.sdk]
min_sdk_version = 33
target_sdk_version = 35
max_sdk_version = 36

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "android"
