[package]
name = "rendering"
version.workspace = true
edition.workspace = true

[dependencies]
formats.workspace = true
glam = "0.32"
bytemuck = { version = "1.24", features = ["derive"] }
anyhow = "1"
etagere = "0.2"
rangemap = { version = "1.7", features = ["serde1"] }
oxicode = { version = "0.2", features = ["serde", "simd"] }
byteorder = "1.5"
ktx2 = "0.5"
wgpu = "28"
tracing.workspace = true
num_enum = "0.7"
rustc-hash = "2.1.1"
